--- a/template.html
+++ b/template.html
@@ -47,7 +47,13 @@
         </ul>
 
         <div id="banner-container" class="banner">
-          <!-- Put the banner content here -->
+          <img src="media\banner.jpg" alt="banner" class="banner-image">
+          <img src="media\banner.jpg" alt="banner" class="banner-image">
+          <img src="media\banner.jpg" alt="banner" class="banner-image">
+          <img src="media\banner.jpg" alt="banner" class="banner-image">
+          <img src="media\banner.jpg" alt="banner" class="banner-image">
+          <img src="media\banner.jpg" alt="banner" class="banner-image">
+
         </div>
 
       </nav>
