--- a/services.html
+++ b/services.html
@@ -63,16 +63,41 @@
 
       </div>
     </header>
+	<main id="serviceContainer">
+    <div id="serviceHeader">
+      <h1>Our Services</h1>
+    </div>
+  <section class="service">
+    <img src="media/wedding.png" alt="a picture of a wedding">
+    <div class="serviceText">
+      <h2>service 1</h2>
+      <p>Rent high-quality tables and chairs for any event. From elegant dining tables to comfortable seating options, we have what you need to accommodate your guests.</p>
+    </div>
+  </section>
 
-    <main>
-    </main>
+  <section class="service" style="background-color: #f5f5f5;">
+    <img src="decorations.jpg" alt="Decorations">
+    <div class="serviceText">
+      <h2>Decorations</h2>
+      <p>Transform your space with our wide selection of decorations. Whether it's balloon arches, centerpieces, or themed decor, we'll make your event vibrant and unforgettable.</p>
+    </div> 
+  </section>
 
-    <footer>
-      <p><a href="mailto:dreamevents@gmail.com" class="email">dreamevents@gmail.com</a></p>
-      <p>&copy;2023 Dream Events. All rights reserved.</p>
-    </footer>
+  <section class="service">
+    <img src="entertainment.jpg" alt="Entertainment">
+    <div class="serviceText">
+      <h2>Entertainment</h2>
+      <p>Elevate the excitement with our entertainment options. From bounce houses for kids to DJs or live bands for adults, we'll keep the party going!</p>
+    </div>
+  </section>
+</main>
 
-    <script src="script.js"></script>
+<footer>
+  <p><a href="mailto:dreamevents@gmail.com" class="email">dreamevents@gmail.com</a></p>
+  <p>&copy;2023 Dream Events. All rights reserved.</p>
+</footer>
+
+<script src="script.js"></script>
       
   </div> 
   </div>
