--- a/services.html
+++ b/services.html
@@ -68,15 +68,15 @@
       <h1>Our Services</h1>
     </div>
   <section class="service">
-    <img src="media/wedding.png" alt="a picture of a wedding">
+    <img src="media/corporate.jpg" alt="a picture of  corporate office">
     <div class="serviceText">
-      <h2>service 1</h2>
-      <p>Rent high-quality tables and chairs for any event. From elegant dining tables to comfortable seating options, we have what you need to accommodate your guests.</p>
+      <h2>All types of events</h2>
+      <p>Rent high-quality tables and chairs for any kind of event. We specialize in weddings,birthday's, offices, you name it! From elegant dining tables to comfortable seating options, we have what you need to accommodate your guests.</p>
     </div>
   </section>
 
   <section class="service" style="background-color: #f5f5f5;">
-    <img src="decorations.jpg" alt="Decorations">
+    <img src="media/kids_party.jpg" alt="a decorated kids party">
     <div class="serviceText">
       <h2>Decorations</h2>
       <p>Transform your space with our wide selection of decorations. Whether it's balloon arches, centerpieces, or themed decor, we'll make your event vibrant and unforgettable.</p>
@@ -84,7 +84,7 @@
   </section>
 
   <section class="service">
-    <img src="entertainment.jpg" alt="Entertainment">
+    <img src="media/wedding.png" alt="picture of a wedding">
     <div class="serviceText">
       <h2>Entertainment</h2>
       <p>Elevate the excitement with our entertainment options. From bounce houses for kids to DJs or live bands for adults, we'll keep the party going!</p>
