--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                  <iframe width="560" height="315" src="https://www.youtube.com/embed/so8LKNIjaCI" style="border: 0;" allowfullscreen></iframe>
                 </div>
                 <!-- Additional information, description, or related content -->
-                <p>Preview of the AD</p>
+                <p>Dream Events AD</p>
             </div>
 
 
