--- a/services.html
+++ b/services.html
@@ -3,10 +3,10 @@
 
   <head>
     <!-- DO NOT FORGET TO CHANGE TITLE -->
-    <title>Dream Events | template</title>
+    <title>Dream Events | Services</title>
     
     <meta charset="utf-8">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon, may want to edit the image later to remove whitespace around -->
     <link rel="icon" href="media/DREAMEVENTS.png" type="image/x-icon">
