--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dream Events | Home </title>
     
     <meta charset="utf-8">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon, may want to edit the image later to remove whitespace around -->
     <link rel="icon" href="media/DREAMEVENTS.png" type="image/x-icon">
